# vaultix

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  book.toml  compatible.nix  diff_renc_before_after  flake-module.nix  flake.nix  garnix.yaml  justfile
.github/workflows/: clippy.yaml  doc.yaml  eval.yaml  fuzz.yaml  lint.yaml  miri.yaml  statix.yaml  test.yaml  vm-test.yaml
apps/: edit.nix  renc.nix
dev/: UEFI.nix  check.nix  configuration.nix  flake.nix  pre-commit-hooks.nix  test.nix
dev/secrets/: there-is-a-secret.age
doc/: SUMMARY.md  TODO.md  advanced.md  book.toml  cheat-sheet.md  coverage.md  develop.md  faq.md  flake-module.md  flake-option.md  flake-parts-config.md  intro.md  nix-apps.md  nixos-option.md  prerequisites.md  prerequisits.md  pure-nix-config.md  setup.md  threat-model.md  workflow.md
doc/src/: SUMMARY.md  advanced.md  faq.md  flake-option.md  intro.md  nix-apps.md  nixos-option.md  workflow.md
docs/: prerequisits.md
docs/src/: flake-option.md  setup.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_parser_1.rs
module/: default.nix  secretType.nix  template.nix  templateType.nix
src/: cmd.rs  lib.rs  main.rs  profile.rs
src/cmd/: check.rs  deploy.rs  edit.rs  mod.rs  renc.rs  renc_sec_path.rs  stored_sec_path.rs
src/helper/: callback.rs  mod.rs  parse_identity.rs  parse_permission.rs  parse_recipient.rs  placeholder.rs  secret_buf.rs  set_owner_group.rs  stored.rs  template.rs
src/interop/: mod.rs
src/parser/: identity.rs  mod.rs  permission.rs  recipient.rs  template.rs
src/profile/: mod.rs  template.rs
src/util/: callback.rs  makeup.rs  secbuf.rs  secmap.rs  set_owner_group.rs
test/: README  admin  configuration.nix  default.nix  safekey.txt.pub  ssh_key
test/UEFI/: disk.nix
test/secrets/: admin.age  server.age
test/secrets/renced/tester/: 1b91d07a2a9f7305f210128dd6f98f7a-factorio-admin.age  61baa5c8806ab468373d36c092aebf73-factorio-admin.age  745a75ccb0974360dd2d93e3de475a84-factorio-server.age  86a769708dc774bc614c93ccac91a0de-factorio-admin.age  be8d2df802f2c478b192cd35abce6685-factorio-admin.age  bfb4377d536a4cf24e402edfb560fed5-factorio-admin.age  f3fd4af696d59f2f30d6375c79fe662a-factorio-server.age
