[package]
name = "vaultix"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
age = { version = "0.11.0", features = ["ssh", "plugin"]}
argh = "0.1.12"
blake3 = "1.5.4"
console = "0.15.8"
edit = "0.1.5"
eyre = "0.6.12"
hex = "0.4.3"
hex-literal = "0.4.1"
libc = "0.2.158"
log = "0.4.22"
nom = "7.1.3"
papaya = "0.1.4"
pinentry = "0.6"
rpassword = "7.3.1"
serde = "1.0.210"
serde_json = "1.0.132"
sha2 = "0.10.8"
simple_logger = "5.0.0"
subtle = "2.6.1"
sys-mount = "3.0.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
